--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>NDoolan360 Site</title>
   </head>
   <body>
-    <div id="app"></div>
+    <p>Hello World!</p>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
