Fixed favicon url

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/images/placeholder.png" />
+  <link rel="icon" type="image/svg+xml" href="/images/icon.png" />
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/theme-switch.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
