Add vercel analytics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="color-scheme" content="dark light">
   <title>Nathan Doolan</title>
 
+  <script type="module" src="/src/analytics.ts"></script>
   <script type="module" src="/src/copyright.ts"></script>
   <script type="module" src="/src/theme.ts"></script>
   <script type="module" src="/src/projects.ts"></script>
