hotfix/Take unused vars off experience logo-links

--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
                         <!-- Gentrack Ltd -->
                         <li class="card">
                             <div class="card-detail">
-                                <a
-                                    class="card-logo"
-                                    is="logo-link"
-                                    href="https://gentrack.com"
-                                    height="30px"
-                                    width="30px"
-                                    >Gentrack</a
-                                >
+                                <a class="card-logo" is="logo-link" href="https://gentrack.com">Gentrack</a>
                                 <h3>Gentrack</h3>
                             </div>
                             <div class="card-detail-group">
@@ -97,14 +90,7 @@
                         <!-- Proquip Rental & Sales -->
                         <li class="card">
                             <div class="card-detail">
-                                <a
-                                    class="card-logo"
-                                    is="logo-link"
-                                    href="https://pqrs.com.au"
-                                    height="30px"
-                                    width="30px"
-                                    >Proquip</a
-                                >
+                                <a class="card-logo" is="logo-link" href="https://pqrs.com.au">Proquip</a>
                                 <h3>Proquip Rental & Sales</h3>
                             </div>
                             <div class="card-detail-group">
