hotfix/Address W3 validator errors and warnings

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" data-theme="dark">
 
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <link id="favicon" rel="icon" type="image/svg" href="/images/icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link id="favicon" rel="icon" type="image/svg" href="/images/icon.svg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="dark light">
     <title>Nathan Doolan</title>
 
     <link rel="preload" href="/fonts/JosefinSans.woff2" as="font" type="font/woff2" crossorigin>
@@ -35,27 +35,27 @@
         <ul id="external-links" aria-label="external links">
             <li>
                 <a href="https://github.com/NDoolan360" target="_blank" rel="noreferrer">
-                    <span is="custom-logo" aria-label="Github"></span>
+                    <span is="custom-logo" aria-label="Github Logo"></span>
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/nathan-doolan-835a13171" target="_blank" rel="noreferrer">
-                    <span is="custom-logo" aria-label="LinkedIn"></span>
+                    <span is="custom-logo" aria-label="LinkedIn Logo"></span>
                 </a>
             </li>
             <li>
                 <a href="https://discord.com/users/nothindoin" target="_blank" rel="noreferrer">
-                    <span is="custom-logo" aria-label="Discord"></span>
+                    <span is="custom-logo" aria-label="Discord Logo"></span>
                 </a>
             </li>
             <li>
                 <a href="https://cults3d.com/en/users/ND360" target="_blank" rel="noreferrer">
-                    <span is="custom-logo" aria-label="Cults3D"></span>
+                    <span is="custom-logo" aria-label="Cults3D Logo"></span>
                 </a>
             </li>
             <li>
                 <a href="https://boardgamegeek.com/user/Nothin_Doin" target="_blank" rel="noreferrer">
-                    <span is="custom-logo" aria-label="Board Game Geek"></span>
+                    <span is="custom-logo" aria-label="Board Game Geek Logo"></span>
                 </a>
             </li>
             <li>
@@ -92,8 +92,8 @@
                 <hr>
             </div>
             <div id="profile">
-                <img id="profile" alt="Profile Image" title="Picture of me at the Strawberry Field in Liverpool"
-                    loading="eager" src="/images/profile.webp" />
+                <img alt="Profile Image" title="Picture of me at the Strawberry Field in Liverpool" loading="eager"
+                    src="/images/profile.webp">
                 <div>
                     <p>
                         Hey there, I'm Nathan Doolan, a full-time software engineer based in Melbourne, Australia.
@@ -119,7 +119,7 @@
                     <span class="date-range"> Jul 2021 - Present </span>
                     <div>
                         <a class="experience-title" href="https://gentrack.com" target="_blank" rel="noreferrer">
-                            <span is="custom-logo" aria-label="Gentrack"></span>
+                            <span is="custom-logo" aria-label="Gentrack Logo"></span>
                             <h3> Gentrack </h3>
                         </a>
                         <h4 class="current">Intermediate Software Engineer</h4>
@@ -139,7 +139,7 @@
                     <span class="date-range">Feb 2018 - Jul 2021 </span>
                     <div>
                         <a class="experience-title" href="https://pqrs.com.au" target="_blank" rel="noreferrer">
-                            <span is="custom-logo" aria-label="Proquip"></span>
+                            <span is="custom-logo" aria-label="Proquip Logo"></span>
                             <h3>Proquip Rental & Sales</h3>
                         </a>
                         <h4>IT Support Specialist</h4>
@@ -151,7 +151,7 @@
                     <span class="date-range">Feb 2018 - Feb 2021 </span>
                     <div>
                         <a class="experience-title" href="https://www.unimelb.edu.au" target="_blank" rel="noreferrer">
-                            <span is="custom-logo" aria-label="Melbourne University"></span>
+                            <span is="custom-logo" aria-label="Melbourne University Logo"></span>
                             <h3> University of Melbourne </h3>
                         </a>
                         <a class="experience-subtitle"
@@ -172,13 +172,13 @@
                 <h2>Projects</h2>
                 <hr>
             </div>
+            <noscript>This section cannot be loaded without Javascript.</noscript>
             <ul id="project-gallery">
-                <noscript>This section cannot be loaded without Javascript.</noscript>
                 <!-- Template used to dynamically render projects -->
                 <template id="project-template">
                     <li class="card">
                         <a class="card-link" href="" target="_blank" rel="noreferrer"></a>
-                        <img class="card-feature-image" />
+                        <img class="card-feature-image">
                         <div class="card-detail-section">
                             <h3 class="card-title"></h3>
                             <div class="card-detail">
@@ -200,26 +200,26 @@
                 <ul>
                     <li>
                         <a class="btn" href="https://bun.sh" target="_blank" rel="noreferrer">
-                            <span is="custom-logo" aria-label="Bun"></span>
+                            <span is="custom-logo" aria-label="Bun Logo"></span>
                             <p>Bun</p>
                         </a>
                     </li>
                     <li>
                         <a class="btn" href="https://vitejs.dev" target="_blank" rel="noreferrer">
-                            <span is="custom-logo" aria-label="Vite"></span>
+                            <span is="custom-logo" aria-label="Vite Logo"></span>
                             <p>Vite</p>
                         </a>
                     </li>
                     <li>
                         <a class="btn" href="https://tailwindcss.com" target="_blank" rel="noreferrer">
-                            <span is="custom-logo" aria-label="Tailwind CSS"></span>
+                            <span is="custom-logo" aria-label="Tailwind CSS Logo"></span>
                             <p>Tailwind CSS</p>
                         </a>
                     </li>
                     <li>
 
                         <a class="btn" href="https://biomejs.dev" target="_blank" rel="noreferrer">
-                            <span is="custom-logo" aria-label="Biome"></span>
+                            <span is="custom-logo" aria-label="Biome Logo"></span>
                             <p>Biome</p>
                         </a>
                     </li>
@@ -228,7 +228,7 @@
             <div>
                 <h4> Deployed with: </h4>
                 <a class="btn" href="https://vercel.com" target="_blank" rel="noreferrer">
-                    <span is="custom-logo" aria-label="Vercel"></span>
+                    <span is="custom-logo" aria-label="Vercel Logo"></span>
                     <p>Vercel</p>
                 </a>
             </div>
