--- a/index.html
+++ b/index.html
@@ -1,183 +1,240 @@
 <!doctype html>
-<html lang="en" data-theme="">
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <link rel="icon" type="image/png" href="/images/icon-light.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="color-scheme" content="dark light" />
-        <title>Nathan Doolan</title>
+<html lang="en" data-theme="dark">
 
-        <script type="module" rel="preload" src="/src/main.ts"></script>
-        <script type="module" src="/src/theme.ts"></script>
-        <script type="module" src="/src/logo-link-web-component.ts"></script>
-    </head>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <link id="favicon" rel="icon" type="image/svg" href="/images/icon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
+    <title>Nathan Doolan</title>
 
-    <body>
+    <link rel="preload" href="/fonts/JosefinSans.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/OxygenMono.woff2" as="font" type="font/woff2" crossorigin>
+
+    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/src/theme.ts"></script>
+    <script type="module" src="/src/logo-web-component.ts"></script>
+</head>
+
+<body>
+    <header>
+        <h1>
+            <a href="/">
+                /ND
+            </a>
+        </h1>
+
         <nav>
-            <h1>/ND</h1>
-
             <ul id="internal-links" aria-label="internal links">
-                <li><a href="#bio">Bio</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#education">Education</a></li>
                 <li><a href="#projects">Projects</a></li>
             </ul>
-
-            <ul id="external-links" aria-label="external links">
-                <li><a is="logo-link" href="https://github.com/NDoolan360">Github</a></li>
-                <li><a is="logo-link" href="https://www.linkedin.com/in/nathan-doolan-835a13171">LinkedIn</a></li>
-                <li><a is="logo-link" href="https://discord.com/users/nothindoin">Discord</a></li>
-                <li><a is="logo-link" href="https://cults3d.com/en/users/ND360">Cults 3D</a></li>
-                <li><a is="logo-link" href="https://boardgamegeek.com/user/Nothin_Doin">Board Game Geek</a></li>
-            </ul>
-
-            <button id="theme-toggle" title="Toggles light & dark theme" aria-label="auto" aria-live="polite">
-                Toggle Theme
-            </button>
         </nav>
 
-        <main id="main">
-            <section id="bio">
-                <div class="heading">
-                    <h2>Bio</h2>
-                    <hr />
-                </div>
-                <div class="content">
-                    <img
-                        alt="Picture of me at the Strawberry Field in Liverpool"
-                        src="/images/profile.jpg"
-                        height="256"
-                    />
+        <ul id="external-links" aria-label="external links">
+            <li>
+                <a href="https://github.com/NDoolan360" target="_blank" rel="noreferrer">
+                    <span is="custom-logo" aria-label="Github"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/nathan-doolan-835a13171" target="_blank" rel="noreferrer">
+                    <span is="custom-logo" aria-label="LinkedIn"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://discord.com/users/nothindoin" target="_blank" rel="noreferrer">
+                    <span is="custom-logo" aria-label="Discord"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://cults3d.com/en/users/ND360" target="_blank" rel="noreferrer">
+                    <span is="custom-logo" aria-label="Cults3D"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://boardgamegeek.com/user/Nothin_Doin" target="_blank" rel="noreferrer">
+                    <span is="custom-logo" aria-label="Board Game Geek"></span>
+                </a>
+            </li>
+            <li>
+                <!-- Theme button toggle adapted from: https://web.dev/patterns/theming/theme-switch/#html -->
+                <template id="theme-toggle-template">
+                    <button id="theme-toggle" title="Toggles light & dark theme" aria-label="auto" aria-live="polite">
+                        <svg class="sun-and-moon" aria-hidden="true" viewBox="0 0 24 24">
+                            <mask class="moon" id="moon-mask">
+                                <rect x="0" y="0" width="100%" height="100%" fill="white" />
+                                <circle cx="24" cy="10" r="6" fill="black" />
+                            </mask>
+                            <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
+                            <g class="sun-beams" stroke="currentColor">
+                                <line x1="1" y1="12" x2="3" y2="12" />
+                                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+                                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+                                <line x1="12" y1="1" x2="12" y2="3" />
+                                <line x1="12" y1="21" x2="12" y2="23" />
+                                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+                                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+                                <line x1="21" y1="12" x2="23" y2="12" />
+                            </g>
+                        </svg>
+                    </button>
+                </template>
+            </li>
+        </ul>
+    </header>
+
+    <main>
+        <section id="about">
+            <div class="heading">
+                <h2>About</h2>
+                <hr>
+            </div>
+            <div id="profile">
+                <img id="profile" alt="Profile Image" title="Picture of me at the Strawberry Field in Liverpool"
+                    loading="eager" src="/images/profile.webp" />
+                <div>
                     <p>
-                        Hey there, I'm Nathan Doolan, a full-time software engineer based in Melbourne. I spend my days
-                        coding and my spare time collecting board games, enjoying nature, and experimenting with my 3D
-                        printer. With a background in computer science, I'm always eager to learn new things, tackle new
+                        Hey there, I'm Nathan Doolan, a full-time software engineer based in Melbourne, Australia.
+                        I spend my days coding and my spare time collecting board games, enjoying nature, and
+                        experimenting with my 3D printer.
+                    </p>
+                    <p>
+                        With a background in computer science, I'm always eager to learn new things, tackle new
                         challenges, and find satisfaction in the simple joy of crafting an elegant solution to a
                         problem.
                     </p>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <section id="experience">
-                <div class="heading">
-                    <h2>Experience</h2>
-                    <hr />
-                </div>
-                <div class="content">
-                    <ol>
-                        <!-- Gentrack Ltd -->
-                        <li class="card">
-                            <div class="card-detail">
-                                <a class="card-logo" is="logo-link" href="https://gentrack.com">Gentrack</a>
-                                <h3>Gentrack</h3>
-                            </div>
-                            <div class="card-detail-group">
-                                <div class="card-detail">
-                                    <pre>Nov 2022 &mdash; Present </pre>
-                                    <pre>Intermediate Software Engineer</pre>
-                                </div>
-                                <div class="card-detail">
-                                    <pre>Jan 2022 &mdash; Nov 2022</pre>
-                                    <pre>Junior Software Engineer</pre>
-                                </div>
-                                <div class="card-detail">
-                                    <pre>Jul 2021 &mdash; Dec 2021</pre>
-                                    <pre>Graduate Software Engineer</pre>
-                                </div>
-                            </div>
-                        </li>
-
-                        <!-- Proquip Rental & Sales -->
-                        <li class="card">
-                            <div class="card-detail">
-                                <a class="card-logo" is="logo-link" href="https://pqrs.com.au">Proquip</a>
-                                <h3>Proquip Rental & Sales</h3>
-                            </div>
-                            <div class="card-detail-group">
-                                <div class="card-detail">
-                                    <pre>Apr 2021 &mdash; Jul 2021</pre>
-                                    <pre>IT Support Specialist</pre>
-                                </div>
-                                <div class="card-detail">
-                                    <pre>Nov 2018 &mdash; Apr 2021</pre>
-                                    <pre>IT/Marketing Assistant</pre>
-                                </div>
-                                <div class="card-detail">
-                                    <pre>Feb 2018 &mdash; Nov 2018</pre>
-                                    <pre>Administrative Assistant</pre>
-                                </div>
-                            </div>
-                        </li>
-                    </ol>
-                </div>
-            </section>
-
-            <section id="education">
-                <div class="heading">
-                    <h2>Education</h2>
-                    <hr />
-                </div>
-                <div class="content">
-                    <ol>
-                        <!-- Melbourne University -->
-                        <li class="card">
-                            <div class="card-detail">
-                                <a class="card-logo" is="logo-link" href="https://www.unimelb.edu.au"
-                                    >Melbourne University</a
-                                >
-                                <h3>University of Melbourne</h3>
-                            </div>
-                            <div class="card-detail-group">
-                                <div class="card-detail">
-                                    <pre>Feb 2018 &mdash; Feb 2021</pre>
-                                    <pre>Bachelor of Science: Computing and Software Systems</pre>
-                                </div>
-                            </div>
-                        </li>
-                    </ol>
-                </div>
-            </section>
-
-            <section id="projects">
-                <div class="heading">
-                    <h2>Projects</h2>
-                    <hr />
-                </div>
-                <div id="project-gallery" class="content">
-                    <noscript>This section cannot be loaded without Javascript.</noscript>
-                    <!-- Template used to dynamically render projects -->
-                    <template id="project-template">
-                        <article class="card">
-                            <img class="card-feature-image" />
-                            <h3 class="card-heading"></h3>
-                            <p class="card-description"></p>
-                            <div class="card-detail">
-                                <a class="card-link btn" href="">Link &gt;</a>
-                                <div class="card-detail">
-                                    <div class="card-language-colour"></div>
-                                    <p class="card-language"></p>
-                                    <a class="card-logo" is="logo-link" href="" tabindex="-1"></a>
-                                </div>
-                            </div>
-                            <hr />
-                        </article>
-                    </template>
-                </div>
-            </section>
-
-            <section>
-                <div class="heading">
-                    <h2>
-                        <a href="https://github.com/NDoolan360/NDoolan360-Site">
-                            Hand crafted with <b class="html">HTML</b>, <b class="css">CSS</b> and <b class="ts">TS</b>
+        <section id="experience">
+            <div class="heading">
+                <h2>Experience</h2>
+                <hr>
+            </div>
+            <ol>
+                <li class="experience-item">
+                    <span class="date-range"> Jul 2021 - Present </span>
+                    <div>
+                        <a class="experience-title" href="https://gentrack.com" target="_blank" rel="noreferrer">
+                            <span is="custom-logo" aria-label="Gentrack"></span>
+                            <h3> Gentrack </h3>
                         </a>
-                    </h2>
-                </div>
-                <footer class="heading">
-                    <h2 id="copyright">&copy; Nathan Doolan {current year}</h2>
-                    <hr />
-                </footer>
-            </section>
-        </main>
-    </body>
+                        <h4 class="current">Intermediate Software Engineer</h4>
+                        <h4>Junior Software Engineer</h4>
+                        <h4>Graduate Software Engineer</h4>
+                        <div class="chip-wrapper">
+                            <span class="chip">Git</span>
+                            <span class="chip">SQL</span>
+                            <span class="chip">Docker</span>
+                            <span class="chip">Jenkins</span>
+                            <span class="chip">API Design</span>
+                            <span class="chip">Unit Testing</span>
+                        </div>
+                    </div>
+                </li>
+                <li class="experience-item">
+                    <span class="date-range">Feb 2018 - Jul 2021 </span>
+                    <div>
+                        <a class="experience-title" href="https://pqrs.com.au" target="_blank" rel="noreferrer">
+                            <span is="custom-logo" aria-label="Proquip"></span>
+                            <h3>Proquip Rental & Sales</h3>
+                        </a>
+                        <h4>IT Support Specialist</h4>
+                        <h4>IT/Marketing Assistant</h4>
+                        <h4>Administrative Assistant</h4>
+                    </div>
+                </li>
+                <li class="experience-item education">
+                    <span class="date-range">Feb 2018 - Feb 2021 </span>
+                    <div>
+                        <a class="experience-title" href="https://www.unimelb.edu.au" target="_blank" rel="noreferrer">
+                            <span is="custom-logo" aria-label="Melbourne University"></span>
+                            <h3> University of Melbourne </h3>
+                        </a>
+                        <a class="experience-subtitle"
+                            href="https://study.unimelb.edu.au/find/courses/major/computing-and-software-systems/"
+                            target="_blank" rel="noreferrer">
+                            <h4> Bachelor of Science: Computing and Software Systems </h4>
+                        </a>
+                    </div>
+                </li>
+            </ol>
+            <a class="btn" href="/documents/Nathan-Doolan-Resume.pdf" download>
+                Full Resume &RightArrow;
+            </a>
+        </section>
+
+        <section id="projects">
+            <div class="heading">
+                <h2>Projects</h2>
+                <hr>
+            </div>
+            <ul id="project-gallery">
+                <noscript>This section cannot be loaded without Javascript.</noscript>
+                <!-- Template used to dynamically render projects -->
+                <template id="project-template">
+                    <li class="card">
+                        <a class="card-link" href="" target="_blank" rel="noreferrer"></a>
+                        <img class="card-feature-image" />
+                        <div class="card-detail-section">
+                            <h3 class="card-title"></h3>
+                            <div class="card-detail">
+                                <span class="card-language-colour"></span>
+                                <p class="card-language-name"></p>
+                                <span class="card-logo" is="custom-logo" aria-label="Logo"></span>
+                            </div>
+                        </div>
+                        <p class="card-description"></p>
+                        <div class="card-chips chip-wrapper"></div>
+                    </li>
+                </template>
+            </ul>
+        </section>
+
+        <footer>
+            <div id="tools">
+                <h4> Built with: </h4>
+                <ul>
+                    <li>
+                        <a class="btn" href="https://bun.sh" target="_blank" rel="noreferrer">
+                            <span is="custom-logo" aria-label="Bun"></span>
+                            <p>Bun</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="btn" href="https://vitejs.dev" target="_blank" rel="noreferrer">
+                            <span is="custom-logo" aria-label="Vite"></span>
+                            <p>Vite</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="btn" href="https://tailwindcss.com" target="_blank" rel="noreferrer">
+                            <span is="custom-logo" aria-label="Tailwind CSS"></span>
+                            <p>Tailwind CSS</p>
+                        </a>
+                    </li>
+                    <li>
+
+                        <a class="btn" href="https://biomejs.dev" target="_blank" rel="noreferrer">
+                            <span is="custom-logo" aria-label="Biome"></span>
+                            <p>Biome</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h4> Deployed with: </h4>
+                <a class="btn" href="https://vercel.com" target="_blank" rel="noreferrer">
+                    <span is="custom-logo" aria-label="Vercel"></span>
+                    <p>Vercel</p>
+                </a>
+            </div>
+            <p id="copyright">&copy; Nathan Doolan 2023</p>
+        </footer>
+    </main>
+</body>
+
 </html>
